Fixed alignment of menu icon in mobile landscape.

--- a/imports/ui/_header.scss
+++ b/imports/ui/_header.scss
@@ -11,15 +11,15 @@
   width: 100%;
   height: 100%;
 }
-#header {
-  padding-right: 3px;
-}
 #mute {
   font-size: large;
   width: 2.5rem;
   text-align: left;
   position: relative;
   top: .2rem;
+}
+#menuToggle {
+  padding-right: 0;
 }
 #menuToggle:hover,
 #menuToggle:focus
